--- a/kr-contact.html
+++ b/kr-contact.html
@@ -235,7 +235,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='kr-contact.html'>
+        <a class='slide' href='kr-contact'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>연결</span>
         </a>
@@ -298,20 +298,12 @@
             <li><a href="#"> <span class='blue'>연구원</span> :: <span class='blue'>엔지니어</span> :: <span
                   class='blue'>분석가</span></a></li>
             <p>____</p>
-            <li><a href="kr.html"><span style="color: rgb(253, 93, 7);">소개 ⏴</span></a></li>
+            <li><a href="kr.html">소개</a></li>
             <li><a href="kr-research.html">연구 진행</a></li>
             <li><a href="kr-resume.html">이력서</a></li>
             <li><a href="kr-activities.html">취미</a></li>
-            <li><a href="kr-contact.html">연락처</a></li>
             <p>____</p>
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>링크드인</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>구글 학술검색</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+            <li><a href="kr-contact.html"><span style="color: rgb(253, 93, 7);">연락처 ⏴</span></a></li>
             <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
           <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
@@ -482,8 +474,7 @@
 
             </div>
 
-            <li><a href="kr-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게
-                    연락</strong></small></a><br>
+            <li><a href="kr-contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br>
             </li>
             <hr>
           </ul>
@@ -524,215 +515,57 @@
         </span>
       </p>
 
-      <p align="justify">
-        <span class="display-mobile">환영합니다, <span id="location2">지구</span>에서 온 친구들 :-）</br></br></span>
+      <div>
 
-        현재, 쉬홍 (
-        <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세)
-        박사는 독일 산업계에서 <strong>신 에너지 동력 시스템</strong> 전문 엔지니어로 활동하며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>을
-        실현하기 위해 노력하고 있습니다. 그는 <strong>유엔 본 클라이메트 변화 컨퍼런스</strong>에서 "중국의 에너지 전환과 기술 혁신" 주제의 세션을 주관하고, 유엔 유럽 경제위원회의 교통과
-        기후 <strong>전문가 그룹 회의</strong>에 참여했습니다. 그는 학위 과정 중에 국제 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고,
-        <strong>300회 이상 인용</strong>되었으며, <strong>3개의 특허</strong>를 획득했습니다. 또한 그는 에너지와 교통 분야에서 7개의 고 영향력 저널의
-        <strong>심사위원</strong>을 맡고 있으며, <strong>스위스 성갈렌 국제 경제 포럼</strong>의 <strong>학술 심사위원</strong>도 맡고 있습니다. 그는 미국 전기화학회
-        논문 초대 및 여행상, 인텔 엣지 AI 장학금, 유럽연합 에라스무스 장학금, 중국 "도전컵" 창업 국가 동상 등을 수상했습니다.
-      </p>
-
-      <p align="justify">
-        그는 2021년 초에 <strong><a href="https://ethz.ch/en.html" target="_blank">취리히 연방 공과대학교</a></strong>에서 박사 학위를 받았으며,
-        스위스 에너지 연구 경쟁 센터의 <strong><a href="https://electrochemistry.ethz.ch/people/person-detail.html?persid=177926"
-            target="_blank">토마스 슈미트 교수</a></strong> 아래서 공부했습니다. 그의 학부, 석사, 박사 과정은 주로 <strong>탄소 중립/신 에너지</strong> 분야에
-        중점을 두고 있으며, <strong><a href="https://psi.ch" target="_blank">스위스 폴쉬어 연구소</a></strong>, <strong><a
-            href="https://oxfordenergy.org" target="_blank">영국 옥스포드 에너지 연구소</a></strong>, <strong><a
-            href="https://tum.de" target="_blank">독일 뮌헨 공과대학교</a></strong>, <strong><a
-            href="https://ecoledesponts.fr/en" target="_blank">프랑스 파리 고등도로교량대학</a></strong>, <strong><a
-            href="https://xfel.eu" target="_blank">EU 자유 전자 레이저</a></strong> 등의 국제 기관에서 연구 및 인턴십을 하였습니다. 또한 그는
-        <strong>토요타 자동차</strong>, <strong>인피니온 테크놀로지스</strong>, <strong>코르보 그룹</strong> 등과의 국제 기업과의 심층적인 연구 개발 협력도 진행하고
-        있습니다. 더불어, 그는 <strong><a href="https://quantic.edu/mba" target="_blank">미국 쿠앤틱 비즈니스 스쿨</a></strong>로부터 전액 장학금을
-        받고 원격 학습으로 MBA 학위를 받았으며, <strong>케임브리지 대학교 비즈니스 스쿨</strong>에서 "그린 전환" 기업 경영 과정을 배우기도 했으며, 주식 연구소(A주식 및 미국 주식)에서
-        개별 주식 및 산업 연구 보고서를 작성했으며, 이중화 펀드(시드 라운드➔A 라운드)에서 신 에너지 트랙 벤처 투자 실무에 종사하기도 했습니다.
-      </p>
-
-      <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
-        </span>
-      </p>
-
-      <!---
-         <p class="display-mobile" style="text-align:left; padding: 0px; margin: 0px;">
-          <strong><a class="display-mobile"href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank" target="_blank"><span class='blue'>G-Scholar</span></a></strong><text class="display-mobile"> | </text><strong><a class="display-mobile" href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span class='blue'>LinkedIn</span></a></strong> 
-          <span style="float:right;">
-            <strong><a class="display-mobile" href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at] tum.de</span></a>
-          </span></strong>
-        </p>
--->
-
-      <p class="hidden-mobile" style="text-align:left;">
-        <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-            id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">유럽 시간 [CET] </a></strong>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <span style="float:right;">
-          <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658678453-c133-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-              title="actual time Beijing" target="_blank" rel="nofollow">베이징 시간 [CST] </a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        </span>
-      </p>
+        <p align="justify">
+          <span class="display-mobile">환영합니다, <span id="location2">지구</span>에서 온 친구들 :-）</br></br></span>
 
 
-      <p class="display-mobile" style="text-align:left;">
-        <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-            id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">유럽</a></strong>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <span style="float:right;">
-          <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Time - Beijing" target="_blank" rel="nofollow">베이징</a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        </span>
-      </p>
+          협력, 상담 또는 미디어 인터뷰에 관심이 있으시다면, 저를 소셜 미디어에서 팔로우하시고 아래의 양식을 통해 연락해 주세요!
+
+          <!-- <div class="social-media">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#"><i class="fab fa-zhihu"></i></a>
+          <a href="#" class="custom-logo"><img src="images/icon/google-scholar.svg" width="50" height="50"
+              alt="Google Scholar"></a>
+        </div> -->
 
 
-
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section hidden-mobile" id="Carbon-Neutral">
-        <h3 class="hidden-mobile" style="display:inline-block">지속 가능한 개발 목표 2030</h3>
-        <div style="float: right">
-          <h3>
-            <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
-              href="https://www.booked.net/weather/beijing-18391"><img
-                src="https://w.bookcdn.com/weather/picture/5_18391_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
-                width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
-            <!-- weather widget end -->
-          </h3>
-        </div>
-
-      </div>
-
-      <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
-        <h3 class="display-mobile" style="display:inline-block">지속 가능한 개발 목표 2030</h3>
-
-        <!---
--->
-      </div>
-
-      <div class="doc-section" id="sdgs">
-
-
-        <div class="slideshow-container">
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg7_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg8_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg8_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg9_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg11_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg13_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg14_kr.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg14_kr_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <a class="prev" onclick="plusSlides(-1)">❮</a>
-          <a class="next" onclick="plusSlides(1)">❯</a>
-
-        </div>
-
-
-
-        <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-          <span class="dot" onclick="currentSlide(4)"></span>
-          <span class="dot" onclick="currentSlide(5)"></span>
-          <span class="dot" onclick="currentSlide(6)"></span>
-          <span class="dot" onclick="currentSlide(7)"></span>
-        </div>
-
-
-
-        <!---<img class="hidden-mobile" src="images/SDG_all.png" style="width:100%" alt="">
-          <img class="display-mobile" src="images/SDG_all.png" style="width:100%" alt="">--->
-
-
-      </div>
-
-
-
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-
-      <div class="doc-section" id="contact">
-        <h3>저에게 연락</h3>
         <ul class="square">
-          <li><strong>이메일</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a> (협업이나 요청이 있으시면 언제든지 저에게 연락 주시기 바랍니다 :-)<br /></li>
-          <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
-                class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
-          <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
-          <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
-          <a href="https://www.flagcounter.me/details/eVL"><img src="https://www.flagcounter.me/eVL/"
-              alt="Flag Counter"></a>
-          <!--https://www.flagcounter.me/regenerate/eVL H2Sk4BYCg 韩语-->
-          <!-- <br>
-          <a href="https://info.flagcounter.com/D897" target="_blank">
-            <div style="width: fit-content; height: calc(100% * 2 / 3); overflow: hidden; display: inline-block;">
-              <img
-                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
-                alt="Flag Counter" style="display: block;">
-            </div>
-          </a> -->
-        </ul>
-        </ul>
-      </div>
 
-      <br>
+          <li><strong>이메일</strong>: <a href="mailto:h.xu@tum.de" target="_blank"><span class='blue'>h.xu
+                [at] tum.de</span></a> (여기서 [at]을 @로 교체해 주세요)</li>
+          <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
+                class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 부탁드립니다)</li>
+          <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"><span
+                class='blue'>linkedin.com/in/xuhong/</span></a> (팔로워: 1800+)<br></li>
+          <li><strong>구글 학술</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
+              target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (인용 수: <span
+              id="citation-count">300+</span>)<br></li>
+
+        </ul>
+        </p>
+
+        <hr class="display-mobile" style="width:113%">
+        <hr class="hidden-mobile">
+
+        <iframe class="hidden-mobile" width="700px" height="2680px"
+          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUQklWVUNGTTNKMVJBWEZDU0FaOFhUSDUxWC4u&embed=true&lang=ko-KR"
+          frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:180vh"
+          allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+
+        <iframe class="display-mobile" style="width:113%" width="900px" height="1650px"
+          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUQklWVUNGTTNKMVJBWEZDU0FaOFhUSDUxWC4u&embed=true&lang=ko-KR"
+          frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:260vh"
+          allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+
+
+
+      </div>
 
     </div><!-- Content -->
 
