--- a/kr-resume.html
+++ b/kr-resume.html
@@ -250,7 +250,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='kr-contact.html'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>연결</span>
         </a>
@@ -323,7 +323,7 @@
             <li><a href="kr-activities.html">취미</a></li>
 
             <p>____</p>
-            <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
+            <li><a href="kr-contact" style="color: rgb(253, 93, 7);">연락처</a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -432,7 +432,9 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 스포츠</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br></li>
+            <li><a href="kr-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게
+                    연락</strong></small></a><br>
+            </li>
             <hr>
           </ul>
         </div>
