--- a/kr-activities.html
+++ b/kr-activities.html
@@ -284,7 +284,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='kr-contact.html'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>연결</span>
         </a>
@@ -357,10 +357,8 @@
             <li><a href="#travel">&nbsp;• 여행</a></li>
             <li><a href="#gallery">&nbsp;• 갤러리</a></li>
             <li><a href="#sports">&nbsp;• 스포츠</a></li>
-
-
             <p>____</p>
-            <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
+            <li><a href="kr-contact.html" style="color: rgb(253, 93, 7);">연락처</a></li>
             <p>____</p>
 
             <p></p>
@@ -468,7 +466,9 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 스포츠</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br></li>
+            <li><a href="kr-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게
+                    연락</strong></small></a><br>
+            </li>
             <hr>
           </ul>
         </div>
