--- a/kr-research.html
+++ b/kr-research.html
@@ -235,7 +235,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='kr-contact.html'>
           <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
           <span class='name'>연결</span>
         </a>
@@ -306,9 +306,8 @@
             <li><a href="#equity-research">&nbsp;• 주식 조사</a></li>
             <li><a href="kr-resume.html">이력서</a></li>
             <li><a href="kr-activities.html">취미</a></li>
-            <li><a href="#contact">연락처</a></li>
             <p>____</p>
-            <li><a href="#contact" style="color: rgb(253, 93, 7);">연락처</a></li>
+            <li><a href="kr-contact.html" style="color: rgb(253, 93, 7);">연락처</a></li>
             <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
           <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
@@ -416,7 +415,9 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 스포츠</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게 연락</strong></small></a><br></li>
+            <li><a href="kr-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>나에게
+                    연락</strong></small></a><br>
+            </li>
             <hr>
           </ul>
         </div>
