--- a/ru-activities.html
+++ b/ru-activities.html
@@ -242,7 +242,7 @@
       </div>
 
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='ru-contact.html'>
           <span class='element'>K</span>
           <span class='name'>Контакт</span>
         </a>
@@ -293,7 +293,7 @@
             <li><a href="#gallery">&nbsp;• Фотография</a></li>
             <li><a href="#sports">&nbsp;• Спорт</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
+            <li><a href="ru-contact.html"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -392,7 +392,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Спортивный</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
+            <li><a href="ru-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
                     мной</strong></small></a><br></li>
             <hr>
           </ul>
