--- a/ru-resume.html
+++ b/ru-resume.html
@@ -241,7 +241,7 @@
       </div>
 
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='ru-contact.html'>
           <span class='element'>K</span>
           <span class='name'>Контакт</span>
         </a>
@@ -290,7 +290,7 @@
             <li><a href="#awards">&nbsp;• Награды</a></li>
             <li><a href="ru-activities.html">Занятия</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
+            <li><a href="ru-contact.html"><span style="color: rgb(253, 93, 7);">Контакты</span></a></li>
             <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
           <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
@@ -391,7 +391,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Спортивный</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
+            <li><a href="ru-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
                     мной</strong></small></a><br></li>
             <hr>
           </ul>
