--- a/ru-contact.html
+++ b/ru-contact.html
@@ -241,7 +241,7 @@
       </div>
 
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='ru-contact.html'>
           <span class='element'>K</span>
           <span class='name'>Контакт</span>
         </a>
@@ -282,22 +282,12 @@
                   class='blue'>Аналитик</span></a></li>
             <p>____</p>
 
-            <li><a href="ru.html"><span style="color: rgb(253, 93, 7);">Введение ⏴</span></a></li>
+            <li><a href="ru.html">Введение</a></li>
             <li><a href="ru-research.html">Исследования</a></li>
             <li><a href="ru-resume.html">Резюме</a></li>
             <li><a href="ru-activities.html">Занятия</a></li>
-            <li><a href="#contact">Контакт</a></li>
             <p>____</p>
-            <!-- <li><a href="#services">Services</a></li> -->
-            <!-- <li><a href="#contact">Contact</a></li> -->
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>ЛинкедИн</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>Google Scholar</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+            <li><a href="ru-contact.html"><span style="color: rgb(253, 93, 7);">Контакт ⏴</span></a></li>
             <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
           <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
@@ -458,7 +448,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Спортивный</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
+            <li><a href="ru-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Связаться со
                     мной</strong></small></a><br></li>
             <hr>
           </ul>
