--- a/it-activities.html
+++ b/it-activities.html
@@ -237,7 +237,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='it-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contatta</span>
         </a>
@@ -308,7 +308,7 @@
             <li><a href="#gallery">&nbsp;• Galleria</a></li>
             <li><a href="#sports">&nbsp;• Sport</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contatto</span></a></li>
+            <li><a href="it-contact.html"><span style="color: rgb(253, 93, 7);">Contatto</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -410,7 +410,8 @@
 
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contattami</strong></small></a><br>
+            <li><a href="it-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Contattami</strong></small></a><br>
             </li>
             <hr>
           </ul>
