--- a/it-contact.html
+++ b/it-contact.html
@@ -237,7 +237,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='it-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contatta</span>
         </a>
@@ -297,18 +297,12 @@
             <li><a href="#"> <span class='blue'>Ricercatore</span> :: <span class='blue'>Ingegnere</span> :: <span
                   class='blue'>Analista</span></a></li>
             <p>____</p>
-            <li><a href="it.html"><span style="color: rgb(253, 93, 7);">Biografia ⏴</span></a></li>
+            <li><a href="it.html">Biografia</a></li>
             <li><a href="it-research.html">Ricerca</a></li>
             <li><a href="it-resume.html">CV</a></li>
             <li><a href="it-activities.html">Attività</a></li>
-            <li><a href="#contact">Contatta</a></li>
             <p>____</p>
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>LinkedIn</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=it" target="_blank"
-                target="_blank"><span class='blue'>Google Scholar</span></a></li>
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+            <li><a href="it-contact.html"><span style="color: rgb(253, 93, 7);">Contatta ⏴</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -473,7 +467,8 @@
 
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contattami</strong></small></a><br>
+            <li><a href="it-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Contattami</strong></small></a><br>
             </li>
             <hr>
           </ul>
@@ -511,228 +506,46 @@
           </span>
         </span>
       </p>
+      <div>
+        <p align="justify">
+          <span class="display-mobile">Benvenuti amici <span id="location2">dal mondo</span> :-)</br></br></span>
 
-      <p align="justify">
-        <span class="display-mobile">Benvenuti amici <span id="location2">dal mondo</span> :-)</br></br></span>
+          Se sei interessato a esplorare opportunità di collaborazione, consulenza o interviste con i media, sentiti
+          libero di seguirmi sui social media e di contattarmi tramite il modulo sottostante. Non vedo l'ora di entrare
+          in contatto con te!
 
-        Attualmente, il Dott. Hong Xu è un <strong>Ingegnere R&D</strong> specializzato in <strong>Sistemi
-          e-Power</strong> con sede a Monaco di Baviera, dedicato a raggiungere la neutralità carbonica nei settori
-        <strong>Energia</strong> e <strong>Trasporti</strong>. Nel corso della sua carriera, ha lavorato con aziende
-        internazionali e istituzioni accademiche in Europa e Cina, pubblicando oltre <strong>15 articoli</strong> con
-        quasi <strong>300 citazioni</strong> e ottenendo <strong>3 brevetti</strong>. Inoltre, ha presieduto una
-        sessione alla <strong><a href="https://unfccc.int/" target="_blank">Conferenza delle Nazioni Unite sui
-            Cambiamenti Climatici</a></strong> a Bonn, ha partecipato al Gruppo di Esperti della <strong><a
-            href="https://unece.org/" target="_blank">Commissione Economica per l'Europa delle Nazioni
-            Unite</a></strong> con sede a Ginevra, e ha servito come membro della <strong>Giuria Accademica</strong> al
-        <strong><a href="https://symposium.org/" target="_blank">Simposio di St. Gallen</a></strong> in Svizzera. Il
-        Dott. Xu è anche un <strong>Revisore</strong> per diverse riviste ad alto impatto nei campi
-        <strong>Energia</strong>, <strong>Trasporti</strong> e <strong>Sostenibilità</strong>. I suoi sforzi
-        interdisciplinari sono stati riconosciuti con premi tra cui la Borsa di Studio Santander Bank, l'ECS Travel
-        Grant, l'Intel Edge AI Scholarship e l'Erasmus Scholarship.
-      </p>
-
-      <p align="justify">
-        Ha conseguito il dottorato in <strong>Energia Rinnovabile</strong> presso il <strong><a
-            href="https://ethz.ch/en.html" target="_blank">Politecnico federale di Zurigo</a></strong>, in
-        collaborazione con il <strong><a href="https://psi.ch" target="_blank">Paul Scherrer Institute</a></strong> in
-        Svizzera. Prima di ciò, ha ottenuto un Master in Scienza dei Materiali presso il <strong><a
-            href="https://tum.de" target="_blank">Università Tecnica di Monaco di Baviera</a></strong> con tirocini
-        presso l'<strong><a href="https://xfel.eu" target="_blank">European XFEL</a></strong> e <strong><a
-            href="https://infineon.com" target="_blank">Infineon</a></strong> in Germania. La passione del Dott. Xu per
-        la ricerca ad alto impatto lo ha portato a collaborare a lungo termine con leader del settore dell'idrogeno e
-        delle celle a combustibile, tra cui <strong>Toyota Motor</strong> in Giappone e <strong>Freudenberg
-          Group</strong> in Germania. Parallelamente, ha conseguito un <strong>MBA</strong> presso la <strong><a
-            href="https://quantic.edu/mba" target="_blank">Scuola Quantica di Commercio</a></strong> e ha completato
-        corsi executive presso la <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">Scuola di Commercio
-            dell'Università di Cambridge</a></strong>, acquisendo esperienza pratica in una società di venture capital a
-        doppia valuta e in una delle principali società di titoli in Cina.
-      </p>
-
-
-      <p style="text-align:left;">
-        PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> <img id="country-flag"
-          class="flag-icon" src="" alt=""> ?
-        </span>
-      </p>
-      <!---
-         <p class="display-mobile" style="text-align:left; padding: 0px; margin: 0px;">
-          <strong><a class="display-mobile"href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank" target="_blank"><span class='blue'>G-Scholar</span></a></strong><text class="display-mobile"> | </text><strong><a class="display-mobile" href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span class='blue'>LinkedIn</span></a></strong> 
-          <span style="float:right;">
-            <strong><a class="display-mobile" href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at] tum.de</span></a>
-          </span></strong>
-        </p>
--->
-
-      <p class="hidden-mobile" style="text-align:left;">
-        <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-            id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">Ora dell'Europa [CET] </a></strong>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <span style="float:right;">
-          <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658678453-c133-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-              title="actual time Beijing" target="_blank" rel="nofollow">Ora di Pechino [CST] </a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        </span>
-      </p>
-
-
-      <p class="display-mobile" style="text-align:left;">
-        <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-            id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">Europa</a></strong>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <span style="float:right;">
-          <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Time - Beijing" target="_blank" rel="nofollow">Pechino</a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        </span>
-      </p>
-
-
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section hidden-mobile" id="Carbon-Neutral">
-        <h3 class="hidden-mobile" style="display:inline-block">Obiettivi di sviluppo sostenibile 2030</h3>
-        <div style="float: right">
-          <h3>
-            <!-- weather widget start --><a class="hidden-mobile" id="weather" target="_blank"
-              href="https://www.booked.net/weather/beijing-18391"><img
-                src="https://w.bookcdn.com/weather/picture/5_18391_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=w209&anc_id=60060"
-                width="100px" alt="booked.net" style="margin-left: 110px; margin-top: -10px;" /></a>
-            <!-- weather widget end -->
-          </h3>
-        </div>
-
-      </div>
-
-      <div class="doc-section display-mobile" id="Carbon-Neutral" style="width:113%">
-        <h3 class="display-mobile" style="display:inline-block">Obiettivi di sviluppo sostenibile 2030</h3>
-
-        <!---
--->
-      </div>
-
-      <div class="doc-section" id="sdgs">
-
-
-        <div class="slideshow-container">
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg7_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg8_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg8_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg9_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg11_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg13_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg14_it.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg14_it_mobi.png" style="width:100%">
-            <div class="text"></div>
-          </div>
-
-          <a class="prev" onclick="plusSlides(-1)">❮</a>
-          <a class="next" onclick="plusSlides(1)">❯</a>
-
-        </div>
-
-
-
-        <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-          <span class="dot" onclick="currentSlide(4)"></span>
-          <span class="dot" onclick="currentSlide(5)"></span>
-          <span class="dot" onclick="currentSlide(6)"></span>
-          <span class="dot" onclick="currentSlide(7)"></span>
-        </div>
-
-
-
-        <!---<img class="hidden-mobile" src="images/SDG_all.png" style="width:100%" alt="">
-          <img class="display-mobile" src="images/SDG_all.png" style="width:100%" alt="">--->
-
-
-      </div>
-
-
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-
-
-      <div class="doc-section" id="contact">
-        <h3>Contattami</h3>
         <ul class="square">
+
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a> (Non esitate a contattarmi per qualsiasi collaborazione o
-            richiesta!)<br /></li>
+                class='blue'>h.xu
+                [at] tum.de</span></a> (sostituisci [at] con @ )</li>
+          <!-- <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
+            class='blue'>h.xu [at] tum.de</span></a> (Non esitate a contattarmi in caso di collaborazioni o richieste :-)<br /></li> -->
           <li><strong>Riunione online</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
-                class='blue'>calendly.com/heliosxu/45min</span></a> (riunione 1 a 1, si prega di prenotare in anticipo)
+                class='blue'>calendly.com/heliosxu/45min</span></a> (incontro 1 a 1, si prega di prenotare in anticipo)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
               target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
-          <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
+          <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
-          <a href="https://www.flagcounter.me/details/eVJ"><img src="https://www.flagcounter.me/eVJ/"
-              alt="Flag Counter"></a>
-          <!--  https://www.flagcounter.me/regenerate/eVJ iSXKTYjiR 意大利语  -->
-
-          <!-- <br>
-          <a href="https://info.flagcounter.com/D897" target="_blank">
-            <div style="width: fit-content; height: calc(100% * 2 / 3); overflow: hidden; display: inline-block;">
-              <img
-                src="https://s01.flagcounter.com/count/D897/bg_FFFFFF/txt_404040/border_FFFFFF/columns_8/maxflags_16/viewers_3/labels_0/pageviews_1/flags_0/percent_0/"
-                alt="Flag Counter" style="display: block;">
-            </div>
-          </a> -->
-
         </ul>
+        </p>
 
+        <hr class="display-mobile" style="width:113%">
+        <hr class="hidden-mobile">
 
-        </ul>
+        <iframe class="hidden-mobile" width="700px" height="2580px"
+          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUMTdRWVA2QU5OV1NUUkVYUTZURVY1WTZZWC4u&embed=true&lang=it-IT"
+          frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:187vh"
+          allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+
+        <iframe class="display-mobile" style="width:113%" width="900px" height="1750px"
+          src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAYAAMAoNQBUMTdRWVA2QU5OV1NUUkVYUTZURVY1WTZZWC4u&embed=true&lang=it-IT"
+          frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:270vh"
+          allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+
       </div>
 
-      <br>
 
     </div><!-- Content -->
 
