--- a/it-research.html
+++ b/it-research.html
@@ -237,7 +237,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='it-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contatta</span>
         </a>
@@ -306,7 +306,7 @@
             <li><a href="it-resume.html">CV</a></li>
             <li><a href="it-activities.html">Attività</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contatto</span></a></li>
+            <li><a href="it-contact.html"><span style="color: rgb(253, 93, 7);">Contatto</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -407,7 +407,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sport</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contattami</strong></small></a><br>
+            <li><a href="it-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Contattami</strong></small></a><br>
             </li>
             <hr>
           </ul>
