--- a/it.html
+++ b/it.html
@@ -237,7 +237,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='it-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contatta</span>
         </a>
@@ -301,7 +301,7 @@
             <li><a href="it-research.html">Ricerca</a></li>
             <li><a href="it-resume.html">CV</a></li>
             <li><a href="it-activities.html">Attività</a></li>
-            <li><a href="#contact">Contatta</a></li>
+            <li><a href="it-contact.html">Contatta</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
@@ -473,7 +473,8 @@
 
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>Contattami</strong></small></a><br>
+            <li><a href="it-contact.html"><small style="color: rgb(97, 97, 97);">▸
+                  <strong>Contattami</strong></small></a><br>
             </li>
             <hr>
           </ul>
